# rocketship

./: .gitignore  Cargo.toml  README.org  Rocket.toml  flake.nix  index.html  shell.nix
src/: lib.rs  main.rs
src/handlers/: catchers.rs  index.rs  login.rs  mod.rs
src/models/: context.rs  db.rs  earthquake.rs  mod.rs  query_builder.rs  user.rs
static/css/: index.css  login.css
static/js/: sample.js
templates/: index.html.hbs  login.html.hbs  table.html.hbs
templates/nav/: nav.html.hbs  sidebar.html.hbs
