[package]
name = "rocketship"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotly = "0.7.0"
reqwest = { version = "0.11.9", features = ["json"] }
rocket = { version = "0.5.0-rc.1", features = ["json", "tls", "secrets"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
rust-argon2 = "1.0"
tokio = { version = "1", features = ["full"] }
serde = "1.0.133"
itertools = "0.10.3"

## diesel = { version = "1.4.8", default-features = false, features = ["postgres"] }
